--- a/node.js_todo-list/views/guest.ejs
+++ b/node.js_todo-list/views/guest.ejs
@@ -3,28 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/main.css">
     <title>Todo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
     <%- include('nav.html') %>
 <ul class="list-group">
-  <% for(let i = 0; i < posts.length; i++){ %> 
+  <% for(let i = 0; i < gposts.length; i++){ %> 
   <li class="list-group-item">
-    <a href="/detail/<%= posts[i]._id %>">할일 제목 : <%= posts[i].title %></a>
-    <p>할일 마감 날짜 : <%=posts[i].date %></p>
-    <button type="button" class="btn btn-outline-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
+    <h4>이름 : <%= gposts[i].name %></h4>
+    <p>남긴 말 : <%= gposts[i].memo %></p>
+    <button type="button" class="deleted" data-id="<%= gposts[i]._id %>">삭제</button>
   </li>
   <% } %>
 </ul>
+<div class="container mt-4">
+    <form action="/guestbook" method="POST">
+      <div class="form-group">
+        <label>이름</label>
+        <input type="text" class="form-control" name="name">
+      </div>
+      <p></p>
+      <div class="form-group">
+        <label>남길 말</label>
+        <input type="text" class="form-control" name="memo">
+      </div>
+      <p></p>
+      <button type="submit" class="btn btn-danger">Submit</button>
+    </form>
+    </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
-  $('.delete').click(function(e){
-    const nowClick = $(this);
+  $('.deleted').click(function(e){
     $.ajax({
     method : 'DELETE',
-    url : '/delete',
+    url : '/deleted',
     data : {_id : e.target.dataset.id}
   }).done(function(result){
     location.reload();
