--- a/node.js_todo-list/views/edit.ejs
+++ b/node.js_todo-list/views/edit.ejs
@@ -3,24 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/main.css">
     <title>Todo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
     <%- include('nav.html') %>
-      <div class="container">
-      <h4 class="text-center">상세페이지</h4>
-
-      <div class="card" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">제목: <%= data.title %></h5>
-          <h6 class="card-subtitle mb-2 text-muted">날짜: <%= data.date %></h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="/edit/<%= data._id %>" class="card-link">수정하기</a>
+      <div class="container mt-4">
+      <form action="/edit?_method=PUT" method="POST">
+        <div class="form-group">
+          <label>Todo</label>
+          <input type="text" value="<%=post._id%>" name="id" style="display: none;">
+          <input value="<%= post.title %>" type="text" class="form-control" name="title">
         </div>
+        <p></p>
+        <div class="form-group">
+          <label>Due date</label>
+          <input value="<%= post.date %>" type="text" class="form-control" name="date">
+        </div>
+        <p></p>
+        <button type="submit" class="btn btn-danger">Submit</button>
+      </form>
       </div>
-      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
