--- a/node.js_todo-list/views/nav.html
+++ b/node.js_todo-list/views/nav.html
@@ -15,6 +15,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/guest">GuestBook</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/mypage">MyPage</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/signup">SignUp</a>
+          </li>
         </ul>
       </div>
     </div>
