--- a/node.js_todo-list/views/search.ejs
+++ b/node.js_todo-list/views/search.ejs
@@ -15,11 +15,11 @@
     </div>
 
 <ul class="list-group">
-  <% for(let i = 0; i < posts.length; i++){ %> 
+  <% for(let i = 0; i < post.length; i++){ %> 
   <li class="list-group-item">
-    <a href="/detail/<%= posts[i]._id %>">할일 제목 : <%= posts[i].title %></a>
-    <p>할일 마감 날짜 : <%=posts[i].date %></p>
-    <button type="button" class="btn btn-outline-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
+    <a href="/detail/<%= post[i]._id %>">할일 제목 : <%= post[i].title %></a>
+    <p>할일 마감 날짜 : <%=post[i].date %></p>
+    <button type="button" class="btn btn-outline-danger delete" data-id="<%= post[i]._id %>">삭제</button>
   </li>
   <% } %>
 </ul>
@@ -48,6 +48,7 @@
 })
 
 </script>
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
